--- a/instruction.css
+++ b/instruction.css
@@ -21,6 +21,8 @@ html {
     padding-top: 10px;
     padding-bottom: 20px;
 
+    justify-items: center;
+
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
