--- a/instruction.css
+++ b/instruction.css
@@ -1,43 +1,39 @@
 body {
     background: #0000004b url(images/rust-background.jpg);
     background-attachment: fixed;
-    backdrop-filter: blur(7px);
-	background-repeat: repeat-x;
+    backdrop-filter: blur(5px);
 }
 
 html {
-    scroll-behavior: smooth;
+    scroll-behavior: smooth; /*Делает плавное перемещение по странице, при нажатии на якорную ссылку*/
 }
 
-.outer-box {
+.outer-box { /*Стиль для блока со всем содержимым*/
     display: block;
-    background-color: #fff5d773;
+    background-color: #fae6acab;
     
     border: 1px solid black;
     border-radius: 10px;
 
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 10px;
     padding-bottom: 20px;
-
-    justify-items: center;
 
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     margin-bottom: 20px;
 
-    max-width: 750px;
+    width: auto;
 }
 
 .outer-box a {
-    color: #dd7513;
+    color: #be6c0e;
 
     font-family:Arial, Helvetica, sans-serif;
     font-size:medium;
 
-    text-decoration: none;
+    text-shadow: black;
 }
 
 .content-li {
@@ -81,10 +77,15 @@ html {
 .img-logo {
     display: block;
 
-    width: 500px;
-    max-height: auto;
+    width: 400px;
+    height: auto;
     
     margin: 20px auto;
+}
+
+.img-logo img {
+    width: 100%;
+    height: 100%;
 }
 
 .italic-text {
