--- a/css/instruction.css
+++ b/css/instruction.css
@@ -78,7 +78,7 @@ html {
 .img-logo {
     display: block;
 
-    width: 400px;
+    max-width: 500px;
     height: auto;
     
     margin: 20px auto;
@@ -131,4 +131,21 @@ html {
 .term-definition-text-block {
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.img-box {
+    display: block;
+
+    width: 80%;
+    height: auto;
+    
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.img-box img {
+    width: 100%;
+    height: 100%;
 }
