--- a/css/instruction.css
+++ b/css/instruction.css
@@ -2,10 +2,15 @@ body {
     background: #0000004b url(../images/rust-background.jpg);
     background-attachment: fixed;
     backdrop-filter: blur(5px);
+
+    margin: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 html {
     scroll-behavior: smooth; /*Делает плавное перемещение по странице, при нажатии на якорную ссылку*/
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 .outer-box { /*Стиль для блока со всем содержимым*/
@@ -31,7 +36,6 @@ html {
 .outer-box a {
     color: #be6c0e;
 
-    font-family:Arial, Helvetica, sans-serif;
     font-size:medium;
 
     text-decoration: none;
@@ -46,14 +50,12 @@ html {
 
     padding: 1px;
 
-    font-family: 'Courier New', monospace;
     overflow-x: auto;
 }
 
 .content-li a {
     color: #000000;
 
-    font-family: 'Courier New', monospace;
     font-size: medium;
 
     text-decoration: none;
@@ -69,8 +71,6 @@ html {
     padding-left: 15px;
     padding-right: 15px;
 
-    font-family: 'Courier New', monospace;
-
     white-space: pre;
     overflow-x: auto;
 }
@@ -81,7 +81,9 @@ html {
     max-width: 500px;
     height: auto;
     
-    margin: 20px auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
 }
 
 .img-logo img {
@@ -96,14 +98,12 @@ html {
 .default-text {
     text-align: left;
 
-    font-family:Arial, Helvetica, sans-serif;
     font-size: medium;
 }
 
 .description-text {
     text-align: left;
 
-    font-family:Arial, Helvetica, sans-serif;
     font-size: small;
     font-style: italic;
 }
